# fs2open.github.com

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  fs2open.Doxyfile.in  version_override.cmake
.github/workflows/: build-dist.yaml  pr-workflow.yaml  standalone-image-workflow.yaml
chromiumprocess/: Application.cpp  Application.h  CMakeLists.txt
ci/: file_metadata.py
ci/appveyor/: build.ps1  check_release.ps1
ci/github/: dist_functions.sh
ci/linux/: clang_tidy.sh
ci/travis/: before_install.sh  before_script.sh  install.sh  release.sh
cmake/: appimage.cmake  cef.cmake  generateHeaders.cmake  globals.cmake  metadata.json.in  platform-darwin.cmake  platform-unix.cmake  platform-win32.cmake  platformChecks.cmake  platformChecks.h.in  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake  toolchain.cmake  util.cmake  version.cmake
cmake/finder/: FindBoostScp.cmake
code/: CMakeLists.txt  prefix_header.h  source_groups.cmake
code/ai/: ai_profiles.cpp  aicode.cpp  aiturret.cpp
code/anim/: animplay.cpp  animplay.h
code/api/: documentation.h  util.h
code/asteroid/: asteroid.cpp
code/autopilot/: autopilot.cpp
code/bmpman/: bm_internal.h  bmpman.cpp  bmpman.h
code/cfile/: cfile.cpp  cfile.h  cfilearchive.cpp  cfilearchive.h  cfilesystem.cpp  filesystem.h  fileystem.cpp  internal.h  io.cpp  types.h
code/chromium/: ApplicationImpl.cpp  Browser.cpp  ChromiumStateLogic.cpp  ChromiumStateLogic.h  ClientImpl.cpp  ClientImpl.h  chromium.cpp
code/cmdline/: cmdline.cpp  cmdline.h
code/controlconfig/: controlsconfigcommon.cpp
code/cutscene/: Decoder.cpp  Decoder.h  cutscenes.cpp  cutscenes.h  movie.cpp  movie.h  mvelib.cpp  mveplayer.cpp  oggplayer.cpp  oggplayer.h  player.cpp  player.h
code/ddsutils/: ddsutils.cpp
code/debris/: debris.h
code/decals/: decals.cpp
code/def_files/: apiCompat.lua  cfile_require.lua  main-f.sdr  main-g.sdr  main-v.sdr
code/fireball/: fireballs.cpp
code/freespace2/: freespace.cpp
code/fs2netd/: fs2netd_client.cpp  tcp_client.cpp  tcp_client.h  tcp_socket.cpp  tcp_socket.h
code/gamehelp/: contexthelp.cpp
code/gamesequence/: gamesequence.cpp  gamesequence.h
code/gamesnd/: eventmusic.cpp  gamesnd.cpp
code/globalincs/: alphacolors.cpp  fsmemory.cpp  fsmemory.h  pstypes.h  vmallocator.h  windebug.cpp
code/graphics/: 2d.cpp  2d.h  DeviceContext.cpp  DeviceContext.h  decal_draw_list.cpp  decal_draw_list.h  font.cpp  generic.cpp  gropengl.cpp  gropengl.h  gropenglbmpman.cpp  gropenglbmpman.h  gropengldraw.cpp  gropengllight.cpp  gropenglpostprocessing.cpp  gropenglshader.cpp  gropenglstate.cpp  gropenglstate.h  gropengltexture.cpp  gropengltexture.h  gropengltnl.cpp  grstub.cpp  render.cpp  uniform_structs.h  uniforms.cpp
code/hud/: hudartillery.cpp  hudconfig.cpp  hudmessage.cpp  hudparse.cpp
code/iff_defs/: iff_defs.cpp
code/inetfile/: cftp.cpp
code/io/: joy-sdl.cpp  key.cpp  mouse.cpp
code/localization/: localize.cpp  localize.h
code/math/: vecmat.cpp  vecmat.h
code/menuui/: barracks.cpp  credits.cpp  mainhallmenu.cpp  optionsmenumulti.cpp  playermenu.cpp  readyroom.cpp  snazzyui.cpp  techmenu.cpp
code/mission/: missionbriefcommon.cpp  missioncampaign.cpp  missioncampaign.h  missionload.cpp  missionmessage.cpp  missionparse.cpp  missiontraining.cpp
code/missionui/: chatbox.cpp  fictionviewer.cpp  missioncmdbrief.cpp  missiondebrief.cpp  missionscreencommon.cpp  missionshipchoice.cpp  missionweaponchoice.cpp  redalert.h
code/mod_table/: mod_table.cpp  mod_table.h
code/model/: draw_list.cpp  draw_list.h  model.h  modelanim.h  modelinterp.cpp  modelread.cpp  modelrender.cpp  modelrender.h
code/nebula/: neb.cpp  neblightning.cpp
code/network/: multi.cpp  multi_ingame.cpp  multi_log.cpp  multi_obj.cpp  multi_options.cpp  multi_pmsg.cpp  multi_pxo.cpp  multimsgs.cpp  multiui.cpp  multiutil.cpp  psnet2.cpp  stand_gui-unix.cpp  stand_gui.cpp  stand_gui.h
code/object/: objcollide.h  object.h  objectshield.cpp  objectsort.cpp
code/osapi/: dialogs.cpp  osapi.cpp  osregistry.cpp  outwnd.cpp  outwnd_unix.cpp
code/palman/: palman.cpp
code/parse/: generic_log.cpp  lua.cpp  lua.h  parselo.cpp  parselo.h  scripting.cpp  scripting.h  sexp.cpp
code/pcxutils/: pcxutils.cpp
code/pilotfile/: csg.cpp  csg_convert.cpp  pilotfile.cpp  pilotfile.h  pilotfile_convert.cpp  pilotfile_convert.h  plr.cpp  plr_convert.cpp
code/playerman/: managepilot.cpp  playercontrol.cpp
code/pngutils/: pngutils.cpp  pngutils.h
fred2/: management.cpp  management.h  missionsave.cpp  missionsave.h  textviewdlg.cpp  voiceactingmanager.cpp
freespace2/: CMakeLists.txt  freespace.cpp  freespace.h  resources.cmake
lib/: CMakeLists.txt  boost.cmake  luabind.cmake  prebuilt.cmake  vfspp.cmake
lib/ea/: CMakeLists.txt
lib/ea/EASTL/: CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt  FFmpegConfiguration.txt
lib/jansson/: CMakeLists.txt
lib/libsdl/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/minizip/: CMakeLists.txt
lib/oggvorbis/: CMakeLists.txt
lib/openal/: CMakeLists.txt
lib/opengl/gl/: extensions.txt  gen_cmd.txt
lib/opengl/gl/glad/include/glad/: glad.h
lib/opengl/gl/glad/src/: glad.c
lib/opengl/gl/glad_wgl/include/glad/: glad_wgl.h
lib/opengl/gl/glad_wgl/src/: glad_wgl.c
lib/zlib/: CMakeLists.txt
qtfred/: CMakeLists.txt  source_groups.cmake
test/: CMakeLists.txt  test_util.cmake
test/src/: CMakeLists.txt  main.cpp  source_groups.cmake  test_files.cmake  teststubs.cpp
test/src/api/: CMakeLists.txt  apiTest.cpp  apiTest.hpp  source_groups.cmake
test/src/api/libs/: base.cpp
test/src/api/lua/: vector_index_tests.lua
test/src/api/lua/libs/base/: base_getFrametime.lua
test/src/api/lua/types/: vector_operator_tests.lua
test/src/api/types/: vector.cpp
test/src/scripting/: require.cpp
test/src/util/: FSTestFixture.cpp
wxfred2/: CMakeLists.txt  frmFRED2.cpp  frmFRED2.h  glcViewport.cpp  glcViewport.h  source_groups.cmake  wxFredRender.cpp  wxGraphicsOperations.cpp  wxGraphicsOperations.h  wxfred2.cpp  wxfred2.h  wxfredstubs.cpp
(+145 files in other folders)
