#-------------------------------------------------------------------------------------------
# Copyright (C) Electronic Arts Inc.  All rights reserved.
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# Library definition
#-------------------------------------------------------------------------------------------
file(GLOB EASTL_SOURCES "source/*.cpp")
file(GLOB EASTL_HEADERS "include/EASTL/*.h")
add_library(EASTL ${EASTL_SOURCES} ${EASTL_HEADERS})

#-------------------------------------------------------------------------------------------
# Include dirs 
#-------------------------------------------------------------------------------------------
target_include_directories(EASTL PUBLIC include)
target_link_libraries(EASTL PUBLIC EABase)

